# docker-rust

./: Cargo.toml  Dockerfile  Dockerfile.from-docker-example  Makefile  README.md
.github/workflows/: build.yaml
